fixed #2 Gemfileはテンプレートからコピーする(gem unicornも含めた状態とする)。Ansibleでは複数行の削除ができないため。

--- a/roles/AsakusaSatellite/tasks/main.yml
+++ b/roles/AsakusaSatellite/tasks/main.yml
@@ -4,9 +4,8 @@
        version={{ as_ver }}  update=no
   remote_user: as
 
-- name: insert gem 'unicorn'
-  lineinfile: dest=/home/as/AsakusaSatellite/Gemfile state=present
-              insertbefore="^group" line="gem 'unicorn'"
+- name: Template Gemfile
+  template: src=Gemfile dest=~/AsakusaSatellite/Gemfile mode=0664
   remote_user: as
 
 - name: bundle install
