OAuthのcallback-URLの設定を追加した

--- a/roles/AsakusaSatellite-plugins/tasks/omniauth-redmine.yml
+++ b/roles/AsakusaSatellite-plugins/tasks/omniauth-redmine.yml
@@ -18,5 +18,9 @@
             backup=yes
   remote_user: as
 
+- name: template config/initializers/omniauth_redmine.rb
+  template: src=omniauth-redmine/initializers/omniauth_redmine.rb.j2 dest={{ as_dir }}/config/initializers/omniauth_redmine.rb
+  remote_user: as
+
 - name: restart AsakusaSatellite
   service: name=AsakusaSatellite state=restarted
